--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,12 +1,17 @@
 <h2>Showing the select article</h2>
 
-<p>
+<h2 align="center">
     Title: <%= @article.title %>
-</p>
+</h2>
+<div class="well col-xs-8 col-xs-offset-2">
+    <h4 class="center">
+        <strong>Description: </strong>
+    </h4>
+    <hr>
+    <%= simple_format(@article.description) %>
 
-<p>
-    Description: <%= @article.description%>
-</p>
+    <%= link_to  "Edit", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+    <%= link_to "Delete", article_path(@article), method: "delete", data:{ confirm: "Are you sure on delete: #{@article.title}?"}, class: "btn btn-xs btn-danger" %> 
+    <%= link_to  "Back", articles_path, class: "btn btn-xs btn-success" %>
 
-<%= link_to  "Back", articles_path %> |
-<%= link_to  "Edit", edit_article_path(@article) %>
+</div>
